# eva-navigation-unit

./: Cargo.toml  README.md  config.toml  install.sh
.github/instructions/: stage-commit.instructions.md
.github/skills/debug-android-auto/: SKILL.md
deploy/eva-hotspot/: 49-eva-hotspot.rules  eva-hotspot  eva-hotspot.service  hotspot.env  install.sh
docs/: 3d-ui-elements-plan.md  README.md  architecture.md  configuration.md  debug-pipeline.md  design-decisions.md  obd2.md  status.md
docs/plans/: multi-touch.md
src/: audio.rs  config.rs  container.rs  controls.rs  gfx.rs  hostapd.rs  jamesdsp.rs  logging.rs  main.rs  messages.rs  nmrs_extensions.rs  protocol.rs  spectrum.rs  ui.rs  video.rs
src/obd2/: mod.rs  transport.rs  worker.rs
src/visualizer/: arc.rs  bars.rs  mod.rs  spectrum_proc.rs
ui/: app.slint  theme.slint
ui/components/: capsule_bar_slider.slint  dropdown.slint  gl_icon.slint  glow_text.slint  hud_panel.slint  nav_button.slint  sidebar.slint  toggle.slint  view_slot.slint
ui/views/: android_auto.slint  quick_controls.slint  settings.slint  settings_android_auto.slint  settings_dsp.slint  settings_ui.slint  settings_wifi_bt.slint  visualizer.slint
