[package]
name = "a310"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
android-auto = { path = "../android-auto", features = ["usb", "wireless"] }
async-trait = "0.1"
bluetooth-rust = "0.3"
clap = { version = "4", features = ["derive", "env"] }
cpal = "0.17"
glow = "0.17"
log = "0.4"
nmrs = "2.0"
openh264 = "0.9"
ringbuf = "0.4"
serde = { version = "1", features = ["derive"] }
slint = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
    "tracing-log",
] }
# Optional local-visualization backends (off by default).
tracing-chrome = { version = "0.7", optional = true }
console-subscriber = { version = "0.4", optional = true }
zbus = "5"
zvariant = "5"

[build-dependencies]
slint-build = "1"

# Optimize dependencies even in debug builds. The H.264 → RGB pixel conversion
# (openh264) is ~80× slower when compiled unoptimized, which made dev builds
# stutter badly. This keeps fast incremental recompiles of our own crate while
# building dependencies with optimizations so video decodes in real time.
[profile.dev.package."*"]
opt-level = 3

[features]
# Both transport modes enabled by default — match the android-auto path dep
default = []

# Emit a Chrome/Perfetto trace file (open in https://ui.perfetto.dev). See
# docs for usage; adds the `tracing-chrome` layer.
chrome-trace = ["dep:tracing-chrome"]

# Expose a live async task view via `tokio-console`. Requires building with
# RUSTFLAGS="--cfg tokio_unstable". Adds the `console-subscriber` layer.
tokio-console = ["dep:console-subscriber"]

# Required for the v1 certificate used by android-auto (src/cert.rs).
# `[patch]` only applies from the crate being built, so it must be duplicated
# here even though android-auto declares the same patch.
[patch.crates-io]
rustls-webpki = { git = "https://github.com/uglyoldbob/webpki", branch = "main5" }
